[workspace]
members = [
  "JS/wasm/crates/apis",
  "JS/wasm/crates/arakoo-core",
  "JS/wasm/crates/cli",
  "JS/wasm/crates/serve",
  "JS/wasm/types/jsonnet",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
wizer = "4.0.0"
wasmtime = "16"
wasmtime-wasi = "16"
wasi-common = "16"
javy = { version = "2.1.0" }
anyhow = "1.0.79"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[profile.release]
lto = true
opt-level = 3

[profile.dev]
incremental = true
