[workspace]
members = [ "crates/apis", "crates/arakoo-core", "crates/cli","crates/serve"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
wizer = "4.0.0"
wasmtime = "16"
wasmtime-wasi = "16"
wasi-common = "16"
javy = { version = "2.2.0-alpha.1" }
anyhow = "1.0.79"
once_cell = "1.19.0"

[profile.release]
lto = true
opt-level = 3
