[package]
name = "apis"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
console = []
random = ["dep:fastrand"]
stream_io = []
text_encoding = []
http = []
jsonnet=[]
prisma=[]

[dependencies]
anyhow = { workspace = true }
fastrand = { version = "2.0.1", optional = true }
javy = { workspace = true }
# wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }
tokio = "1.36.0"
serde = { workspace = true }
serde_json = { workspace = true }
