[package]
name = "serve"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasi-common = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
anyhow = {workspace = true}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
hyper = {version="0.14.26", features=["full"]}
futures = "0.3.24"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "fmt"] }