[package]
name = "wasmjs-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
javy = { version = "2.1.0", features = ["json"] }
regex = "1"
serde_json = "1.0.108"
# wit-bindgen-rust = "0.13.1"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }

[profile.release]
lto = "thin"
