[package]
name = "wasmjs-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4"
lazy_static = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
wasmtime = "13"
wasmtime-wasi = "13"
wasi-common = "13"
wit-bindgen-wasmtime = { git = "https://github.com/fermyon/wit-bindgen-backport", rev = "598cd229bb43baceff9616d16930b8a5a3e79d79", features = [
    "async",
] }
wax = "0.6"
regex = "1"
base64 = "0.21"
sha256 = "1"
blake3 = "1.5.0"
wasmparser = "0.115.0"
toml = "0.8.6"
actix-files = "0.6.2"
http = "0.2.11"
wiggle = "15.0.0"
thiserror = "1.0"
tracing = "0.1.40"
semver = "^0.10.0"
